# ai-homework-checker

./: CMakeLists.txt  README.md  solution.cpp  solution.py
.github/workflows/: grade.yml  publish.yml  review.yml
scripts/: ai_review.py  ai_review_cpp.py
tests/: test_cpp.cpp  test_student_code.py
